--- a/src/app/components/users/user.component.html
+++ b/src/app/components/users/user.component.html
@@ -1,6 +1,76 @@
 
 <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-  <div class="container bootstrap snippet" *ngIf="rest.getRole()=='Admin'">
+
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">Nuevo usuario</h6>
+    </div>
+    <div class="card-body">
+            <div class=" col-md-12 mb-3">
+                    <p>Usuario</p>
+                    <form class="needs-validation" [formGroup]="reactiveForm" (ngSubmit)="createUser()">
+                        <div class="form-row">
+                          <div class="col-md-4 mb-3">
+                            <label for="validationCustom01">Nombre(s)</label>
+                            <input type="text" class="form-control" class="form-control" placeholder="Lyria" formControlName="first_name" #first_name>
+                          </div>
+                          <div class="col-md-4 mb-3">
+                            <label for="validationCustom02">Apellido(s)</label>
+                            <input type="text" class="form-control" formControlName="last_name" #lastName placeholder="Gonzalez" required>
+                          </div>
+                          <div class="col-md-4 mb-3">
+                            <label for="validationCustomUsername">Usuario</label>
+                            <div class="input-group">
+                              <div class="input-group-prepend">
+                                <span class="input-group-text" id="inputGroupPrepend">@</span>
+                              </div>
+                              <input type="text" class="form-control" formControlName="nick_name" id="validationCustomUsername" name="nickName" #nickName placeholder="lyriaGlez" aria-describedby="inputGroupPrepend" required>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-row">
+                          <div class="col-md-5 mb-3">
+                            <label for="validationCustom03">Correo electrónico</label>
+                            <input type="text" class="form-control" formControlName="email" name="email" #email id="validationCustom03" placeholder="lyriaglez@gmail.com" required>
+                          </div>
+                          <div class="col-md-4 mb-3">
+                            <label for="validationCustom04">Contraseña</label>
+                            <input type="password" class="form-control" name="password" formControlName="password" #password id="validationCustom04" placeholder="*******" required>
+                          </div>
+                          <div class="col-md-3 mb-3">
+                            <label for="validationCustom05">Tipo de usuario</label>
+                            <select id="inputType" class="form-control" formControlName="user_type" name="userType" #userType required>
+                                <option disabled>Elegir...</option>
+                                <option>Admin</option>
+                                <option>Chef</option>
+                                <option>Gerente</option>
+                                <option>Compras</option>
+                                <option>Chofer</option>
+                            </select>
+                          </div>
+                        </div>
+                        
+                        <button class="btn btn-primary float-right mb-3" type="reset" (click)="createUser() "
+                        [disabled]="!reactiveForm.valid">Agregar</button>
+                        
+                        <button class="btn btn-danger float-right mb-3 ml-3" type="reset" [routerLink]="['/users']"
+                        >Cancelar</button>
+                      </form>
+                </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+<!--
+<div class="container bootstrap snippet" *ngIf="rest.getRole()=='Admin'">
       <div class="row">
           <div class="col-lg-12">
               <div class="main-box no-header clearfix">
@@ -111,3 +181,4 @@
             </div>
     </div>
 </div>
+-->
