--- a/src/app/components/users/user.component.html
+++ b/src/app/components/users/user.component.html
@@ -53,7 +53,7 @@
                         <button class="btn btn-primary float-right mb-3" type="reset" (click)="createUser() "
                         [disabled]="!reactiveForm.valid">Agregar</button>
                         
-                        <button class="btn btn-danger float-right mb-3 ml-3" type="reset" [routerLink]="['/users']"
+                        <button class="btn btn-danger float-right mb-3" type="reset" [routerLink]="['/users']"
                         >Cancelar</button>
                       </form>
                 </div>
