--- a/src/app/components/request/view/seeOne.component.html
+++ b/src/app/components/request/view/seeOne.component.html
@@ -44,7 +44,7 @@
                         <td>{{product.category}}</td>
                         <td>{{product.unit}}</td>
                         <td>{{product.quantity}}</td>
-                        <td>{{theProv[i]}}</td>       
+                        <td>{{theProv[i]}}</td>
                     </tr>
                 </tbody>
             </table>
@@ -89,9 +89,9 @@
             </span>
             <span class="text" style="color:white">Cancelar</span>
         </a>
-        
 
-        <p>{{req}}</p>
+
+        <!-- <p>{{req}}</p> -->
 
 
 
