--- a/src/app/components/request/viewList/viewRequest.component.html
+++ b/src/app/components/request/viewList/viewRequest.component.html
@@ -40,10 +40,10 @@
                                 <a class="table-link" (click)="watchRq(rq._id)" >
                                     <span class="fa-stack">
                                         <i class="fa fa-square fa-stack-2x"></i>
-                                        <i class="fas fa-check fa-stack-1x fa-inverse"></i>
+                                        <i class="fas fa-eye fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </a>
-                                
+
                                 <a routerLink="/requests/update/{{rq._id}}" class="table-link" *ngIf="canEdit(rq.status) === true">
                                     <span class="fa-stack">
                                         <i class="fa fa-square fa-stack-2x"></i>
