Se agrega validacion de ruta nueva

--- a/src/app/components/request/request.component.html
+++ b/src/app/components/request/request.component.html
@@ -91,12 +91,12 @@
                         <hr>
 
                     </ng-container>
-                    <div class="mb-4 text-right">
+                    <!-- <div class="mb-4 text-right">
                         <button class="btn btn-primary float-right mb-3" type="reset" (click)="addLine(i)">Agregar</button>
                         <br>
                         <br>
 
-                    </div>
+                    </div> -->
                 </div>
 
 
