--- a/src/app/components/unit/unit.component.html
+++ b/src/app/components/unit/unit.component.html
@@ -1,6 +1,36 @@
 
 <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">Nuevo proveedor</h6>
+    </div>
+    <div class="card-body">
+        <div class=" col-md-12 mb-3">
+            <form class="needs-validation" [formGroup]="reactiveForm" (ngSubmit)="createProvider()">
+                    <div class="form-row">
+                            <div class="col-md-4 mb-3">
+                              <label for="validationCustom01">Unidad de Medida</label>
+                              <input type="text" class="form-control" formControlName="name" class="form-control" #name id="validationCustom01" placeholder="Caja"  required>
+                            </div>
+                            <div class="col-md-4 mb-3">
+                              <label for="validationCustom01">Peso en Kilogramos</label>
+                              <input type="number" class="form-control" formControlName="weigh" class="form-control" #weigh id="validationCustom01" placeholder="32"  required>
+                            </div>
+                          </div>
+                          <button class="btn btn-primary float-right mb-3" type="reset" (click)="createUnits()"
+                          [disabled]="!reactiveForm.valid">Agregar</button>
+                <button class="btn btn-danger float-right mb-3 mr-3" type="reset" [routerLink]="['/units']"
+                        >Cancelar</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+
+<!--
+<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+
   <div class="container bootstrap snippet" *ngIf="rest.loggedIn() && rest.getRole()=='Admin' || rest.getRole()=='Gerente'">
       <div class="row">
           <div class="col-lg-12">
@@ -29,53 +59,5 @@
       </div>
   </div>
 
-  <div class="container bootstrap snippet">
-    <div class="row">
-        <div class="col-lg-12">
-                    <div class="table-responsive">
-                        <div class="main-box no-header clearfix">
-                            <div class="main-box-body clearfix">
-                        <table class="table user-list" >
-                            <thead>
-                                <tr >
-                                <th><span>Unidades de medida</span></th>
-                                <th><span>Peso</span></th>
-                                <th *ngIf="rest.loggedIn() && rest.getRole()=='Admin' || rest.getRole()=='Gerente'"><span>Opciones</span></th>
-                                </tr >
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let u of units">
-                                    <td>
-                                        <img src="https://bootdey.com/img/Content/user_1.jpg" alt="">
-                                        <a href="#" class="user-link">{{u.name}}</a>
-                                    </td>
-                                    <td>
-                                        <p>{{u.weigh}} Kgs.</p>
-                                    </td>
 
-                                    <td style="width: 20%;"  *ngIf="rest.loggedIn() && rest.getRole()=='Admin' || rest.getRole()=='Gerente'">
-
-
-
-                                        <a routerLink="/units/update//{{u._id}}" class="table-link">
-                                            <span class="fa-stack">
-                                                <i class="fa fa-square fa-stack-2x"></i>
-                                                <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-                                            </span>
-                                        </a>
-                                        <a class="table-link danger" (click)="deleteUnits(u._id)">
-                                            <span class="fa-stack">
-                                                <i class="fa fa-square fa-stack-2x"></i>
-                                                <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
-                                            </span>
-                                        </a>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-              </div>
-            </div>
-    </div>
-</div>
+-->
